@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-08T16:09:19Z",
+  "timestamp" : "2022-06-10T08:10:00Z",
   "count_outdated" : 1590,
   "uniques_outdated" : 89,
-  "count" : 1642,
-  "uniques" : 100,
+  "count" : 1644,
+  "uniques" : 101,
   "views" : [
     {
       "timestamp": "2022-05-27T00:00:00Z",
@@ -65,6 +65,13 @@
       "timestamp": "2022-06-08T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-10T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
