@@ -1,5 +1,5 @@
 {
-  "count": 52,
+  "count": 54,
   "uniques": 3,
   "views": [
     {
@@ -45,6 +45,11 @@
     {
       "timestamp": "2022-06-08T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-10T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
