@@ -1,3 +1,10 @@
+2022-06-10T08:10:00Z:
+* notice: last 14d: unq all: 3 54
+* notice: prev accum: outdated-unq outdated-all / unq all: 89 1590 / 100 1642
+* notice: next accum: outdated-unq outdated-all / unq all: 89 1590 / 101 1644
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-06-10]
+
 2022-06-08T16:09:19Z:
 * notice: last 14d: unq all: 3 52
 * notice: prev accum: outdated-unq outdated-all / unq all: 89 1590 / 99 1641
